--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,1 +1,7 @@
-edit.html.erb
+<h1>edit;</h1>
+
+<% form_for(@task) do |t| %>
+  <% t.label :title %>
+  <% t.text_field :details %>
+  <% t.submit %>
+<% end %>
