--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>edit;</h1>
 
-<% form_for(@task) do |t| %>
+<%= form_for(@task) do |t| %>
   <% t.label :title %>
   <% t.text_field :details %>
   <% t.submit %>
