--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,9 +1,9 @@
 <h1>here is the task index;</h1>
 <ul>
-  <% @tasks.each do |t| %>
-    <li><%= link_to '#{task.title}', 'tasks/#{task.id}' %></li>
+  <% @tasks.each do |task| %>
+    <li><%= link_to task.title, task_path(task.id) %></li>
 <% end %>
 </ul>
 
 
-<%= link_to "Add a task", tasks_new_path %>
+<%= link_to "Add a task", new_task_path %>
